<resources>
    <string name="app_name">Soluevo Challenge</string>
    <string name="unauthorized">Incorrect e-mail or password.</string>
    <string name="internal_error">An internal error occurred.</string>
    <string name="unknown_error">Unknown error, contact your system administrator</string>
    <string name="no_internet_connection_error">No internet connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="state">State</string>
    <string name="contract_number">Nº</string>
    <string name="status" translatable="false">Status</string>
    <string name="status_detran" translatable="false">Status Detran</string>
    <string name="search">Search</string>
    <string name="title_activity_aa">AAA</string>
    <string name="title_activity_vehicle">VehicleActivity</string>
    <string name="title_activity_credor">CredorActivity</string>
    <string name="title_activity_contract_form">ContractFormActivity</string>
    <string name="title_activity_attachments">AttachmentsActivity</string>
    <string name="name">Name</string>
    <string name="rg" translatable="false">RG</string>
    <string name="renavam" translatable="false">Renavam</string>
    <string name="chassi" translatable="false">Chassi</string>
    <string name="uf_placa">UF Board</string>
    <string name="remarcado">Remarked</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="personal">Personal</string>
    <string name="creditor">Creditor</string>
    <string name="contractResponse">ContractResponse</string>
    <string name="attachments">Attachments</string>
    <string name="vehicle">Vehicle</string>
    <string name="agent_name">Agent Name</string>
    <string name="cnpj" translatable="false">CNPJ</string>
    <string name="cep" translatable="false">CEP</string>
    <string name="uf" translatable="false">UF</string>
    <string name="county">County</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="address">Address</string>
    <string name="number">Number</string>
    <string name="Complement">Complement</string>
    <string name="cel_number">Cel. Number</string>
    <string name="serial_number">Serial number</string>
    <string name="number_of_months">Number of Months</string>
    <string name="type_restriction">Type restriction</string>
    <string name="mora_rate">Mora Rate</string>
    <string name="value_mora_rate">Value Mora Rate</string>
    <string name="value_fine_rate">Value Fine Rate</string>
    <string name="contract_rate">ContractResponse Rate</string>
    <string name="interest_at_the_month">Interest at the Month</string>
    <string name="interest_rate_per_year">Interest Rate per Year</string>
    <string name="indexes">Indexes</string>
    <string name="indication_commission">Indication Commission</string>
    <string name="commission">Commission</string>
    <string name="conclude">Conclude</string>
    <string name="welcome">Welcome, %1$s! You are logged in Detran-%2$s</string>
    <string name="logout">Logout</string>
    <string name="contractResponses">Contracts</string>
    <string name="Account">Account</string>
    <string name="contract_date">Contract Date</string>
    <string name="penalty_indication">Penalty indication</string>
    <string name="contract_code">Contract Number</string>
    <string name="iof_value">Valor IOF</string>
    <string name="fine_rate">Fine Rate</string>
    <string name="contract">Contract</string>
    <string name="contracts">Contracts</string>
    <string name="back_to_contracts_list">Back to Contracts List</string>
    <string name="detran" translatable="false">Detran-%1$s</string>
    <string name="account">Account</string>
    <string name="contract_details">Contract Details</string>
    <string name="no_attachment">There is no attachment attached to this contract</string>
    <string name="created_at">Created at:</string>
    <string name="update_at">Updated at:</string>
    <string name="personal_form">Personal Form</string>
    <string name="vehicle_form">Vehicle Form</string>
    <string name="creditor_form">Creditor Form</string>
    <string name="contract_form">Contract Form</string>
    <string name="attach_pictures">Attach pictures</string>
    <string name="contract_saved_successfully">Contract saved successfully!</string>
    <string name="contract_and_attachments_successfully_saved">Contract and attachments successfully saved!</string>
    <string name="re_enter_contract_number">Re-enter Contract Number</string>
    <string name="re_enter_contract_number_message">Try typing another code, because there is already a contract with the number you have chosen</string>
    <string name="contract_saved_code">Contract number: %1$s successfully saved!</string>
    <string name="attachments_save_successfully">Attachments of the contract number %1$s successfully saved!</string>
    <string name="all_selected_images_already_sent">All selected images have already been sent successfully. Please select other others.</string>
    <string name="error_submiting_images">There was an error submitting the images, please try again. If the error persists. Remove all and select again</string>
    <string name="fill_contract_code_field">Fill in the contract code. You can not save a contract without entering the
        number.
    </string>

</resources>
