<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="contract"
                type="com.angelomelo.soluevochallenge.domain.request.Contratos"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeeee"
            android:paddingTop="10dp">

        <include android:id="@+id/header" layout="@layout/usage_stateprogressbar"/>


        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/footer"
                android:layout_below="@+id/header">

            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.numeroGravameField}"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/serial_number"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.quantidadeMesesField}"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/number_of_months"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.tipoRestricao}"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/type_restriction"
                    />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.taxaMoraField}"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/mora_rate"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <ru.kolotnev.formattedittext.CurrencyEditText
                            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.valorTaxaMoraField}"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/value_mora_rate"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <ru.kolotnev.formattedittext.CurrencyEditText
                            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.taxaMoraField}"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/value_fine_rate"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <ru.kolotnev.formattedittext.CurrencyEditText
                            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.valorTaxaContratoField}"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/contract_rate"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <ru.kolotnev.formattedittext.CurrencyEditText
                            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:singleLine="true"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.valorJurosMesField}"
                            android:inputType="number"
                            android:hint="@string/interest_at_the_month"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <ru.kolotnev.formattedittext.CurrencyEditText
                            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:singleLine="true"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.valorTaxaContratoField}"
                            android:inputType="number"
                            android:hint="@string/interest_rate_per_year"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.indices}"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/indexes"
                    />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:singleLine="true"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.indicacaoComissao}"
                            android:hint="@string/indication_commission"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:validateEmpty="@{true}"
                            app:validateTypeAutoDismiss="@{true}"
                            android:text="@={contract.comissaoField}"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:hint="@string/commission"
                    />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>


        <include android:id="@+id/footer" layout="@layout/usage_footer_buttons_layout"/>

    </RelativeLayout>

</layout>